# SE_algo

padas_o_a/: CMakeLists.txt
padas_o_a/1619D/: 1619D.cpp  task_text.txt
padas_o_a/1631A/: 1631A.cpp  a.out
padas_o_a/prj.codeforces/: CMakeLists.txt
padas_o_a/prj.codeforces/1619D/: 1619D.cpp
padas_o_a/prj.codeforces/1619d/: 1619d.cpp  CMakeLists.txt  a.out  task_text.txt
padas_o_a/prj.codeforces/1631a/: 1631a.cpp  CMakeLists.txt  task_text.txt
padas_o_a/prj.lab/: CMakeLists.txt
padas_o_a/prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.h  test.cpp
padas_o_a/prj.lab/m3i/: CMakeLists.txt  m3i.cpp  m3i.h  test.cpp
padas_o_a/prj.lab/rational/: CMakeLists.txt  a.out  in_test.txt  main.cpp  rational.cpp  rational.h  test.cpp
rational/: rational.cpp
